@@ -1,0 +1,8 @@
+server: http://localhost:9876
+
+load:
+    - ../tools/jquery-1.7.1.js
+    - ../tools/sinon-1.3.4.js
+    - ../../src/main/java/com/lorepo/icplayer/public/libs/commons.js
+    - src/*.js
+    - test/*.js
