@@ -1,0 +1,2 @@
+<div class="animated-page-progress-wrapper">
+</div>
